syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mobigen.datafabric.share.interfaces";
option java_outer_classname = "StorageCommonProto";

import "utilities.proto";

// InputField : 사용자 입력을 받기 위한 기본 데이터 구조 구조
message InputField {
  string key = 1;                       // 입력 받을 데이터의 이름
  bool required = 2;                    // 필수 / 선택 정보
  DataType valueType = 3;                 // 입력 받을 데이터의 타입
  string default = 4;                   // 기본값 or 예시
  //  int32 minimum = 5;
  //  int32 viewType = 5;
  //  int32 maximum = 5;
  //  int32 length = 5;
  string description = 5;               // 설명
  string value = 6;                     // 사용자가 입력한 데이터
}

// AuthType : 저장소 연결시 인증 종류
enum AuthType {
  NONE = 0;
  USER_PASSWORD = 1;
}

// AuthSchema  : 인증 종류와 인증에 따라 필요한 데이터
message AuthSchema {
  AuthType authType = 1;                        // 인증 종류 ( NONE, USER_PASSWORD 등 )
  repeated InputField authInputFields = 2;      // 인증 종류에 따라 필요한 데이터
}