syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mobigen.datafabric.share.interfaces";
option java_outer_classname = "UtilitiesProto";

// Page 페이지, 데이터 개수 정보
message Page {
  int32 size = 1;                // 페이지당 데이터 수
  int32 totalSize = 2;           // 전체 데이터 수
  int32 selectPage = 3;          // 선택 페이지
  int32 totalPage = 4;           // 전체 페이지 수
}

enum Direction {
  ASC = 0;
  DESC = 1;
}

// Sort 정렬 정보, 다중 정렬을 위해 order 필드 추가
message Sort {
  int32 order = 1;               // 정렬 순서
  string field = 2;              // 정렬 대상
  Direction direction = 3;       // 정렬 방향(ASC, DESC)
}

// Pageable 페이지 & 정렬 정보
message Pageable {
  Page page = 1;                 // 페이지 정보
  repeated Sort sort = 2;                 // 정렬 정보
}

// Meta 메타 데이터
message Meta {
  string key = 1;                         // 메타 데이터 키
  string value = 2;                       // 메타 데이터 값
}

// DateTime 시간 데이터
message DateTime {
  string strDateTime = 1;        // 문자형 시간 정보 yyyy-MM-dd HH:mm:ss.SSS ( Asia/Seoul )
  int64 utcTime = 2;             // UTC EPOCH MilliSecond
}

// DateTimeRange 시간 범위
message DateTimeRange {
  DateTime startDateTime = 1;    // 시작 시간
  DateTime endDateTime = 2;      // 종료 시간
}

// 데이터가 없는 응답 메시지
message CommonResponse {
  string code = 1;
  string errMsg = 2;
}

// Data, Storage 상태
enum Status {
  CONNECTED = 0;
  DISCONNECTED = 1;
  ERROR = 2;
  SYNC = 3;
  INIT = 4;
}

message ReqId {
  string id = 1;
}

enum DataType {
  STRING = 0;
  INT32 = 1;
  INT64 = 2;
  BOOL = 3;
  BYTES = 4;
  FLOAT = 5;
  DOUBLE = 6;
  DATETIME = 7;
}
